--- a/src/sass/components/_overlay.scss
+++ b/src/sass/components/_overlay.scss
@@ -1,3 +1,5 @@
+@use "../abstracts" as *;
+
 .overlay {
   width: 100%;
   height: 100%;
@@ -7,16 +9,18 @@
   transition: all 0.5s var(--easing);
 
   &--body {
-    background: rgba(0, 0, 0, 0.25);
-    // background: rgba(var(--color-black), 0.5);
     z-index: 3;
 
-    &.dark-mode {
-      background: rgba(255, 255, 255, 0.25);
-    }
+    @include respond("laptop") {
+      background: rgba(0, 0, 0, 0.25);
 
-    @supports (backdrop-filter: blur(2.5px)) {
-      backdrop-filter: blur(2.5px);
+      @supports (backdrop-filter: blur(2.5px)) {
+        backdrop-filter: blur(2.5px);
+      }
+
+      &.dark-mode {
+        background: rgba(255, 255, 255, 0.25);
+      }
     }
   }
 
